--- a/롤러코스터 좌표.html
+++ b/롤러코스터 좌표.html
@@ -8,6 +8,20 @@
 	width:1100px;
 	height:500px;
 	background:yellow;
+	margin:auto;
+	overflow:hidden;
+}
+.content{
+	width:950px;
+	height:100%;
+	background:pink;
+	float:left;
+}
+.info{
+	width:150px;
+	height:100%;
+	background:#000;
+	float:left;
 }
 </style>
 </head>
