--- a/롤러코스터 좌표.html
+++ b/롤러코스터 좌표.html
@@ -11,11 +11,12 @@
 	margin:auto;
 	overflow:hidden;
 }
-.content{
+#content{
 	width:950px;
 	height:100%;
-	background:pink;
+	background:url("../res/point_chase/roller.png");
 	float:left;
+	position:relative;
 }
 .info{
 	width:150px;
@@ -23,11 +24,43 @@
 	background:#000;
 	float:left;
 }
+#data{
+	width:100%;
+	height:100%;
+	background:red;
+}
 </style>
+<script>
+var content;
+var data;
+
+function init(){
+	content=document.getElementById("content");
+	data=document.getElementById("data");
+
+	content.addEventListener("click",function(){
+		createPoint();
+	});	
+}
+function createPoint(){
+	var span=document.createElement("span");
+	span.innerText="●";
+	span.style.color="#fff";
+	span.style.position="absolute";
+	span.style.left=event.clientX+"px";
+	span.style.top=event.clientY+"px";
+	content.appendChild(span);
+}
+
+addEventListener("load", function(){
+	init();
+});
+
+</script>
 </head>
 <body>
 	<div class="wrapper">
-		<div class="content"></div>
+		<div id="content"></div>
 		<div class="info">
 			<button>출발</button>
 			<button>Pause</button>
