--- a/롤러코스터 좌표.html
+++ b/롤러코스터 좌표.html
@@ -9,13 +9,13 @@
 	height:500px;
 	background:yellow;
 	overflow:hidden;
-	margin:auto;
 }
 #content{
 	width:950px;
 	height:100%;
 	background:url("../res/point_chase/roller.png");
 	float:left;
+	position:relative;
 }
 .info{
 	width:150px;
@@ -48,6 +48,7 @@ function createPoint(){
 	span.style.position="absolute";
 	span.style.left=event.clientX+"px";
 	span.style.top=event.clientY+"px";
+	console.log(event.clientX,event.clientY);
 	content.appendChild(span);
 }
 
