--- a/롤러코스터 좌표.html
+++ b/롤러코스터 좌표.html
@@ -21,13 +21,12 @@ body{margin:0px;}
 .info{
 	width:150px;
 	height:100%;
-	background:#000;
 	float:left;
 }
 #data{
 	width:100%;
 	height:100%;
-	background:red;
+	overflow-y:scroll;
 }
 </style>
 <script>
@@ -61,9 +60,10 @@ function createPoint(){
 }
 function printPoint(){
 	var str="";
-	str=str+"x축:"+pointArray[0][0];
-	str=str+", y축:"+pointArray[0][1]+"<br/>";
-
+	for(var i=0;i<pointArray.length;i++){
+		str=str+"x축:"+pointArray[i][0];
+		str=str+", y축:"+pointArray[i][1]+"<br/>";
+	}
 	data.innerHTML=str;//x축
 }
 
