--- a/롤러코스터 좌표.html
+++ b/롤러코스터 좌표.html
@@ -33,6 +33,7 @@ body{margin:0px;}
 var content;
 var data;
 var pointArray=[];//장차, 1차원 배열들이 담겨질 배열..
+var mario;
 
 function init(){
 	content=document.getElementById("content");
@@ -41,6 +42,7 @@ function init(){
 	content.addEventListener("click",function(){
 		createPoint();
 	});	
+	createMario();
 }
 function createPoint(){
 	var span=document.createElement("span");
@@ -65,6 +67,18 @@ function printPoint(){
 		str=str+", y축:"+pointArray[i][1]+"<br/>";
 	}
 	data.innerHTML=str;//x축
+}
+
+//주인공 등장
+function createMario(){
+	mario=document.createElement("img");
+	mario.src="../res/point_chase/mario.png";
+	mario.style.width=50+"px";
+	mario.style.position="absolute";
+	mario.style.left=575+"px";
+	mario.style.top=403+"px";
+
+	content.appendChild(mario);
 }
 
 addEventListener("load", function(){
