--- a/롤러코스터 좌표.html
+++ b/롤러코스터 좌표.html
@@ -35,6 +35,7 @@ var data;
 var pointArray=[];//장차, 1차원 배열들이 담겨질 배열..
 var mario;
 var index=0;
+var flag=false;
 
 function init(){
 	content=document.getElementById("content");
@@ -44,6 +45,7 @@ function init(){
 		createPoint();
 	});	
 	createMario();
+	setInterval("move()",50);
 }
 function createPoint(){
 	var span=document.createElement("span");
@@ -84,11 +86,11 @@ function createMario(){
 //메모리에 있는 이차원 배열이 마리오가 움직일 좌표들이 모여있는 
 //데이터베이스 이므로, 한층 한층 접근해서 그 정보를 가져온다..
 function move(){
-	mario.style.left=pointArray[index][0]+"px";	
-	mario.style.top=pointArray[index][1]+"px";	
-	index++
-
-	setTimeout("move()",50);
+	if(flag){
+		mario.style.left=pointArray[index][0]+"px";	
+		mario.style.top=pointArray[index][1]+"px";	
+		index++
+	}
 }
 addEventListener("load", function(){
 	init();
@@ -100,8 +102,8 @@ addEventListener("load", function(){
 	<div class="wrapper">
 		<div id="content"></div>
 		<div class="info">
-			<button onClick="move()">출발</button>
-			<button>Pause</button>
+			<button onClick="flag=true">출발</button>
+			<button onClick="flag=false">Pause</button>
 			<div id="data"></div>
 		</div>
 	</div>
