--- a/상품 카테고리.html
+++ b/상품 카테고리.html
@@ -38,15 +38,26 @@ function createTop(){
 }
 //유저가 선택한 상위카테고리에 소속된, 하위카테고리 목록 가져오기!!
 function getDetail(){
+
 	//하위 카테고리를 가져오려면, 유저가 선택한 상위카테고리의 인덱스가
 	//필요하다, 왜?? 그래야 하위카테고리를 담는 2차원 배열의 위치를 알수
 	//있으므로...
-	alert("당신이 선택한 번째는 "+sel_top.selectedIndex);
+	//alert("당신이 선택한 번째는 "+sel_top.selectedIndex);
 	var index=sel_top.selectedIndex;
-	
+
+	//기존에 이미 옵션이 있다면 있다면 모두 제거하기!!!
+	//sel_sub.remove(제거대상 option의 index);
+	var count=subCategory[index].length;
+	for(var i=0;i<count;i++){
+		sel_sub.remove(0);
+	}
+
 	//하위에 출력!!!
-	subCategory[index];
-		
+	for(var i=0;i<subCategory[index].length;i++){
+		var op=document.createElement("option");
+		op.text=subCategory[index][i];
+		sel_sub.add(op);
+	}		
 }
 addEventListener("load", function(){
 	init();
