--- a/9셀 겔러리.html
+++ b/9셀 겔러리.html
@@ -23,7 +23,6 @@
 	position:absolute;
 	left:20px;
 	top:100px;
-	background:yellow;
 }
 .content{
 	width:600px;
@@ -50,7 +49,60 @@
 	top:0px;
 }
 </style>
+<script>
+var map;
+var box;
+var pos=[
+	[0,0],[-200,0],[-400,0],	
+	[0,-200],[-200,-200],[-400,-200],
+	[0,-400],[-200,-400],[-400,-400]
+];
+var targetX=0;
+var targetY=0;
+var a=0.1;
 
+function init(){
+	map=document.getElementById("map");
+	box=document.getElementById("box");
+	box.style.position="absolute";
+	box.style.left=0+"px";
+	box.style.top=0+"px";
+
+	createMap();
+}
+//겔러리를 선택할 수 있는 미니맵
+function createMap(){
+	for(var i=0;i<9;i++){//하드코딩 하지말자...추후 변경예정
+		var div=document.createElement("div");
+		div.style.width=30+"px";
+		div.style.height=30+"px";
+		div.style.border="1px solid blue";
+		div.style.background="yellow";
+		div.style.float="left";
+		div.id=i;
+		div.innerText=div.id;
+		//이벤트 구현 
+		div.addEventListener("click",function(){
+			//alert(this.id+"번째 불렀어?");
+			targetX=pos[this.id][0];
+			targetY=pos[this.id][1];
+			//alert(targetX+","+targetY);
+			move();
+		});
+		map.appendChild(div);
+	}
+}
+//박스 자체를 움직이게 하는 함수
+function move(){
+	box.style.left=parseFloat(box.style.left)+a*(targetX-parseFloat(box.style.left))+"px";
+
+	box.style.top=parseFloat(box.style.top)+a*(targetY-parseFloat(box.style.top))+"px";
+
+}
+addEventListener("load",function(){
+	init();
+});
+</script>
 </head>
 <body>
 	<div class="wrapper">
